[CHANGE] Admins can touch world props to players can touch world props so players can pick up world items.
[CHANGE] Chiefs can now change to cops by doing /cp
[CHANGE] You will buy a door instantly when there would be only one button in the keys menu
[CHANGE] When there's only one option in the keys menu, it will do that option instantly without opening the menu
[REMOVE] The easter egg :(
[REMOVE] the player possessor
[REMOVE] refesh_int concommand, it's been replaced by rp_resetallsettings

SVN VERSTION till 150/ 2.3.5:
Updated by: FPtje Falco

[ADD] Cops can arrest sleeping people
[ADD] Admins can disable the No-respawning when changing job with rp_norespawn 
[ADD] Admins can allow/disallow hobo's by doing rp_allowhobos <1/0>
[ADD] Every door and vehicle controls are put in the reload function of the keys SWEP
[ADD] Re-added the earthquake sound
[ADD] DarkRP now automaticly saves the DarkRP settings(not the costs) in a text file every minute and will get restored when the server starts(like after a crash)
[ADD] Cops chief and mayor only option in the Key menu for superadmins
[ADD] A very easy way to add classes! see shared.lua!
[ADD] rp_hungerspeed command: it's the speed of hunger divided by 10( standard = 7)
[ADD] Admins can choose to make a vote or not to make a vote to become cop/mayor
[ADD] The ability to make custom shipments
[ADD] Console command to remove class specified entities when someone changes class.(Like microwaves get removed when a cook changes to like the hobo): rp_removeclassitems
[ADD] HUD adaptation menu.
[ADD] Timer to the vote screen(You see how much time you have left to vote)
[ADD] DarkRP now saves the costs of guns and other global ints
[ADD] Ability to knock on doors you don't own(left/right mouse with the keys weapon)
[ADD] Some citizen models(Now not every citizen has the same model)